# aixi-dataset

./: .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
aixi_dataset/: drawing.py  generate_figs.py  random_figs.py
aixi_dataset/models/: aixi.py  txuxi.py
in/: dataset.txt
tests/: test_drawing.py
uib_xsds/: drawing.py
