[build-system]
requires = ["setuptools >= 65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmn_experiments"
description = "Scripts for the generation of AIXI and TXUXI datasets"
readme = "README.md"
version = "1.5.1"
authors = [
    { name = "Miquel Miró Nicolau", email = "miquel.miro@uib.cat"},
    { name = "Gabriel Moyà Alcover", email = "gabriel.moya@uib.es"},
    { name = "Antoni Jaume-i-Capó", email = "antoni.jaume@uib.es"}
]
keywords = ["explanaible", "XAI", "machine learning"]
dependencies = [
    'opencv-python',
    'matplotlib',
    'pandas',
    'numpy',
    'scikit_image',
    'tqdm',

]

requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/miquelmn/aixi-dataset"
