[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmn_experiments"
requires-python = ">=3.8"
description = "Scripts for the generation of AIXI and TXUXI datasets"
readme = "README.md"
version = "1.6.0"
maintainers = [
    { name = "Dr. Miquel Miró Nicolau", email = "miquel.miro@uib.cat" },
]
keywords = ["explanaible", "XAI", "machine learning"]
dependencies = [
    'opencv-python',
    'matplotlib',
    'pandas',
    'numpy',
    'scikit_image',
    'tqdm',

]
license="MIT"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/miquelmn/aixi-dataset"
